k8s/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: my-namespace
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
  - port: 80
    targetPort: 3000
