k8s/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: my-namespace
spec:
  type: LoadBalancer
  selector:
    app: phpmyadmin
  ports:
  - port: 80
    targetPort: 80
