k8s/service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: service-nginx
  namespace: my-app-ns
spec:
