k8s/frontend-ingress.yaml
# Testing ingress locally requires updating /etc/hosts file
# Windows is C:/Windows/System32/drivers/etc/hosts
# minikube addons enable ingress
# minikube ip
# Add ` <minikube-ip> phpmyadmin.local `

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: my-namespace
spec:
  rules:
    - host: app.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 3000
